--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,16 @@ after_success:
   - docker push roshinipe/multi-nginx
   - docker push roshinipe/multi-server
   - docker push roshinipe/multi-worker
+
+# deploy:
+#   provider: elasticbeanstalk
+#   region: us-west-1
+#   app: multi-docker
+#   env: MuliDocker-env
+#   bucket_name: elasticbeanstalk-us-west-1-306476627547
+#   bucket_path: docker-multi
+#   on:
+#     branch: master
+#   access_key_id: $AWS_ACCESS_KEY
+#   secret_access_key:
+#     secure: $AWS_SECRET_KEY
